--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "adonis-autoswagger",
-  "version": "3.63.0",
+  "name": "pulen-adonis-autoswagger",
+  "version": "1.0.0",
   "description": "Auto-Generate swagger docs for AdonisJS",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,10 +10,10 @@
     "build": "tsc",
     "prepare": "npm run build"
   },
-  "author": "Adis Durakovic <adis.durakovic@gmail.com>",
+  "author": "Zen Le <kietgolx65234@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ad-on-is/adonis-autoswagger"
+    "url": "https://github.com/zenkiet/adonis-autoswagger"
   },
   "license": "MIT",
   "dependencies": {
@@ -26,6 +26,7 @@
     "json-to-pretty-yaml": "^1.2.2",
     "lodash": "^4.17.21",
     "parse-imports": "^1.1.2",
+    "reflect-metadata": "^0.2.2",
     "typescript": "^5.3.3",
     "typescript-parser": "^2.6.1"
   },
@@ -43,6 +44,5 @@
     "quoteProps": "consistent",
     "bracketSpacing": true,
     "arrowParens": "always"
-  },
-  "packageManager": "pnpm@8.11.0"
+  }
 }
